apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: apps
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: home-assistant
  ports:
    - name: http
      port: 8123
      targetPort: access-http
      protocol: TCP
